idocs-share/source/web/themes/citeckTheme/presentation.css
/* ... */
.share-form .workflow-form .form-fields .form-field,
.share-form .workflow-form .form-fields .yui-gb,
.share-form .workflow-form .form-fields .yui-g {
   padding-bottom: 15px;
   margin-bottom: 15px;
}

.share-form .workflow-form .form-fields .form-field .viewmode-field {
   margin-bottom: 0;
}

.share-form .workflow-details-header h1 {
   padding-left: 12px;
   margin-bottom: 5px;
}

.share-form .workflow-form .workflow-summary-buttons {
   margin-bottom: 15px;
   margin-top: -2.25em;
}

.share-form .workflow-details-actions .yui-button .first-child {
   padding: 0;
   background-image: none;
}

/* end workflow form */


/* advansed search */

#bd #yui-main .search {
   width: 800px;
}

#bd #yui-main .search .forms-container .share-form .form-container .form-fields,
#bd #yui-main .search .yui-gc {
   width: auto;
}

#bd #yui-main .search,
#bd #yui-main .search > div,
#bd #yui-main .search .forms-container .share-form .form-container .form-fields .set {
   margin: 0;
   padding: 0;
}

#bd #yui-main .search .forms-container .share-form {
   padding: 5px 15px; 
   background-color: transparent;
}

#bd #yui-main .search .forms-container .share-form .form-container .form-fields {
   padding: 1em !important;
   border: 1px solid #ccc;
   margin-left: 10px;
   background-color: #f0f0f0;
}

#bd #yui-main .search .forms-container .share-form .form-container .form-fields .set > input.terms {
   width: 100%;
   float: none;
   margin-top: 10px;
}

#bd #yui-main .search .forms-container .share-form .form-container .form-fields .form-field {
   border: none;
  padding: 0;
}

#bd #yui-main .search .forms-container .share-form .form-container .form-fields .form-field:last-child,
#bd #yui-main .search .forms-container .share-form .form-container .form-fields form {
   margin: 0;
}

#bd #yui-main .search .forms-container .share-form .form-container .form-fields .form-field > div,
#bd #yui-main .search .forms-container .share-form .form-container .form-fields .form-field .yui-g .yui-u .format-info {
   clear: both;
}

#bd #yui-main .search .forms-container .share-form .form-container .form-fields .form-field .yui-g .yui-u input.date-entry {
  float: left;
  width: 70%;
  right: 0;
}

#bd #yui-main .search .forms-container .share-form .form-container .form-fields .form-field .yui-g .yui-u a > img.datepicker-icon {
   vertical-align: -10px;
}

#bd #yui-main .search .forms-container .share-form .form-container .form-fields .form-field .yui-g {
   padding-top: 5px;
}

#bd #yui-main .search .yui-gc {
   margin: 15px 15px 15px 25px !important;
}


#bd #yui-main .search .yui-gc,
#bd #yui-main .search .yui-gc .yui-u {
   background-color: transparent;
   border: none;
}

#bd #yui-main .search .yui-gc .yui-u span.lookfor {
   float: left;
  padding-top: 3px;
  font-weight: 900;
}

#bd #yui-main .search .yui-gc .yui-u .yui-button.search-icon > .first-child {
   padding: 0;
   background: none; 
}


/* end advanced search*/

/* FOOTER */

.sticky-footer .footer {
   padding: 15px 0;
   box-shadow: 0px 10px 15px -10px gray inset;
   border-bottom: none;
   background-color: #e0e6ec;
}

.sticky-footer .footer-content {
  overflow: hidden;
  padding: 0 40px;
  font-size: 10px;
}

.sticky-footer .footer a.contact-us-link {
   float: right;
}

.sticky-footer .footer .description {
  float: left;
}

.sticky-footer .footer.modules-info-footer {
  box-shadow: none;
}

/* END FOOTER */


/* alfresco twister actions */

.alfresco-twister.alfresco-twister-open .alfresco-twister-actions {
   position: relative;
   float: right;
   right: 15px;
   display: block;
}

.alfresco-twister.alfresco-twister-open .alfresco-twister-actions > a {
  padding: 0;
  background-position: right center;
  display: inline-block;
  width: 17px;
  height: 17px;
}

.alfresco-twister.alfresco-twister-open .alfresco-twister-actions a[id$="onPanelButtonCreate"] {
   background-image: url(images/create.png) !important;
}

.alfresco-twister.alfresco-twister-open .alfresco-twister-actions a[id$="onPanelButtonCreate"]:hover {
   background-image: url(images/create-active.png) !important;
}

.alfresco-twister.alfresco-twister-open .alfresco-twister-actions a[id$="onPanelButtonEdit"] {
   background-image: url(images/edit-properties.png) !important;
}

.alfresco-twister.alfresco-twister-open .alfresco-twister-actions a[id$="onPanelButtonEdit"]:hover {
   background-image: url(images/edit-properties-active.png) !important;
}

.alfresco-twister.alfresco-twister-open .alfresco-twister-actions a[id$="onPanelButtonUpload"],
.alfresco-twister.alfresco-twister-open .alfresco-twister-actions a[name$="onUploadNewVersionClick"] {
   background-image: url(images/upload.png) !important;
}

.alfresco-twister.alfresco-twister-open .alfresco-twister-actions a[id$="onPanelButtonUpload"]:hover,
.alfresco-twister.alfresco-twister-open .alfresco-twister-actions a[name$="onUploadNewVersionClick"]:hover {
   background-image: url(images/upload-active.png) !important;
}



.alfresco-header-CurrentUserStatus .status {
   padding: 5px;
  border-radius: 10px;
  border: 1px solid;
  max-width: 100% !important;
  margin-bottom: 5px;
}

div#HEADER_USER_STATUS {
  margin-top: 7px;
}

#bd .yui-gc > .yui-u .document-details-panel .panel-body h3:not(:first-child) {
  margin-top: 10px;
}

/* comment-list */

.comments-list {
  padding: 0 15px 0 40px;
  box-sizing: border-box;
}

.comments-list .comment-details {
  width: 100% !important;
  box-sizing: border-box;
}

/* ALF-FILTERS */

#alf-filters {
  background-color: #fdfaf3;
  min-height: 83vh;
  box-sizing: border-box;
}

#alf-filters .filter,
#alf-filters .filter  li {
   padding-left: 25px;
}

#alf-filters .filter .tree,
#alf-filters .filter .category {
   padding-left: 23px;
}

#alf-filters .filter .category .ygtvitem {
  background-color: transparent;
}

#alf-filters .filter > h2 {
   font-weight: 900;
   text-transform: uppercase;
   overflow: hidden;
}

#alf-filters .filter .tree .ygtvitem {
   background-color: transparent;
}
/* ... */

